Moved expr tests to test project.