@@ -18,8 +18,7 @@
 		<skipTests>true</skipTests>
 		<graalvm.version>22.3.2</graalvm.version>
 		<antlr.version>4.11.1</antlr.version>
-		<!-- gen -->
-		<truffleGenSourceDir>${project.build.directory}/generated-sources/truffle-dsl-processor/</truffleGenSourceDir>
+		<truffleGenSourceDir>${project.build.directory}/generated-sources/truffle-dsl-processor/gen/</truffleGenSourceDir>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,20 +47,6 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Needed for AntlrTestRig -->
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr4</artifactId>
-			<version>${antlr.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<version>5.9.2</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.graalvm.truffle</groupId>
 			<artifactId>truffle-api</artifactId>
@@ -106,19 +91,6 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M9</version>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<argLine>-Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dgraalvm.locatorDisabled=true --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</argLine>
-					<skipTests>${skipTests}</skipTests>
-					<trimStackTrace>true</trimStackTrace>
-					<!-- <printSummary>false</printSummary> -->
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
